Fix: Wrong position of loading animation

--- a/public/main.css
+++ b/public/main.css
@@ -66,6 +66,7 @@ body {
 .output {
     display: none;
     margin-top: 20px;
+    margin-bottom: 50px;
 }
 
 .output a {
